# runtime_narrative

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.MD  README.md  ROADMAP.md  WIKI.md  examples_report.html  pyproject.toml
.claude/: settings.local.json
examples/: alert_routing.py  anthropic_analyzer.py  auto_instrument.py  background_analysis.py  basic.py  basic_ollama.py  colorful_errors_and_emojis.py  diagnostics_config.py  dry_run_mode.py  html_report.py  instrument_module.py  logging_bridge.py  middleware_skip_if.py  narrative_class.py  optional_stage.py  otel_tracing.py  saga_record_failure.py  services.py  sqlite_persistence.py  stage_story_name.py  story_recorder.py  structured_log_routing.py  substory_db_call.py  success.py  task_group.py
examples/fastapi_app/: main.py  run.py
marketing/: before_runtime_narrative.py  run_flagship_demo.py  youtube_flagship_script.md
runtime_narrative/: __init__.py  celery.py  cli.py  context.py  decorators.py  diagnostics.py  events.py  failure.py  grpc_interceptor.py  instrumentation.py  logging_bridge.py  middleware.py  middleware_django.py  stage.py  story.py  task_group.py  testing.py
runtime_narrative/analyzers/: __init__.py  anthropic.py  base.py  deduplication.py  ollama.py
runtime_narrative/renderer/: __init__.py  alert_renderer.py  console.py  filter_renderer.py  html_renderer.py  json_renderer.py  otel_log_renderer.py  otel_metrics_renderer.py  otel_renderer.py  persistence_renderer.py  prometheus_renderer.py
tests/: test_alert_renderer.py  test_analyzers.py  test_anthropic_analyzer.py  test_async_renderer.py  test_celery.py  test_console_renderer.py  test_deduplication.py  test_diagnostics.py  test_dry_run.py  test_filter_renderer.py  test_grpc_interceptor.py  test_html_renderer.py  test_instrumentation.py  test_instrumentation_phase2.py  test_issues.py  test_json_renderer.py  test_logging_bridge.py  test_middleware_django.py  test_middleware_propagation.py  test_otel_log_renderer.py  test_otel_metrics_renderer.py  test_otel_renderer.py  test_persistence_renderer.py  test_prometheus_renderer.py  test_redaction_extended.py  test_stage.py  test_stage_metadata.py  test_story.py  test_structured_analysis.py  test_task_group.py  test_testing_utils.py
