[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runtime-narrative"
version = "0.1.0"
description = "Model execution as human-readable stories with lean/rich failure diagnostics and optional LLM analysis"
readme = "README.MD"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
# TODO: replace with your real name and email before publishing
authors = [
    { name = "Shashank Raj", email = "shashank.raj28@gmail.com" },
]
keywords = ["logging", "observability", "tracing", "fastapi", "debugging", "diagnostics", "runtime_narrative"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
# Colored terminal output via typer
console = ["typer>=0.9.0"]
# FastAPI / Starlette middleware
fastapi = ["starlette>=0.27.0"]
# Install everything
all = [
    "typer>=0.9.0",
    "starlette>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/sraj0501/runtime_narrative"
Repository = "https://github.com/sraj0501/runtime_narrative"
"Bug Tracker" = "https://github.com/sraj0501/runtime_narrative/issues"

[tool.setuptools]
packages = ["runtime_narrative", "runtime_narrative.renderer", "runtime_narrative.analyzers"]
`
[dependency-groups]
dev = [
    "build>=1.4.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "starlette>=0.27.0",
    "twine>=6.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]
